feat(control): Registration dashboard を追加
